kfreebsd-9 (9.0~svn223182-1) UNRELEASED; urgency=low

  [ Robert Millan ]
  * Add myself to Uploaders.

  [ Petr Salinger ]
  * Drop 111_linprocfs_kthread.diff, fixed upstream.

 -- Robert Millan <rmh@debian.org>  Thu, 16 Jun 2011 14:18:58 +0200

kfreebsd-9 (9.0~svn223109-0.1) experimental; urgency=low

  * Non-maintainer upload.

  [ Guillem Jover ]
  * Now using Standards-Version 3.9.2 (no changes needed).
  * Switch to source format “3.0 (quilt)”.
    - Remove quilt from Build-Depends.
    - Remove patch target in debian/rules.
    - Remove now unneeded README.source.

  [ Robert Millan ]
  * Add lintian override for "embedded-library" (zlib.ko).
  * Automatically propagate GCC version dependency to debian/control.
  * Add "(meta-package)" to Description of meta-packages to make lintian happy.
  * Build by GCC 4.6.

  [ Petr Salinger ]
  * Add 111_linprocfs_kthread.diff. Closes: #630104.

 -- Robert Millan <rmh@debian.org>  Thu, 16 Jun 2011 10:28:34 +0200

kfreebsd-8 (8.2-1) unstable; urgency=low

  [ Robert Millan ]
  * New upstream release.
    - 000_adaptive_machine_arch.diff: Remove (merged).
    - 000_ata.diff: Remove (merged).
    - 000_ufs_lookup.diff: Remove (merged).
    - 004_xargs.diff: Resync.
    - 102_POLL_HUP.diff: Remove (merged).
    - 104_linprocfs.diff: Remove (merged).
    - 904_dev_full.diff: Resync.
    - 999_firmware.diff: Resync.
  * Make this package buildable on GNU/Linux. Closes: #602770.
  * MIPS port (with malta flavor).

  [ Petr Salinger ]
  * New upstream release, fixes local DoS. Closes: #611476, #613312.
    - 105_apm_amd64.diff: Resync.
    - 907_cpu_class.diff: Resync.
  * Extend 108_teken_utf8_table.diff for middle-dot l/L.
    Closes: #609681. Thanks to Robert Millan.
  * Add xen flavor on i386.
  * Enable quota.  Closes: #608995.

  [ Aurelien Jarno ]
  * Enable CARP, PF and PFSYNC.  Closes: #583848, #600061.

 -- Aurelien Jarno <aurel32@debian.org>  Sat, 19 Feb 2011 23:01:52 +0100
