@@ -6,7 +6,11 @@ kfreebsd-9 (9.0~svn223182-1) UNRELEASED; urgency=low
   [ Petr Salinger ]
   * Drop 111_linprocfs_kthread.diff, fixed upstream.
 
- -- Robert Millan <rmh@debian.org>  Thu, 16 Jun 2011 14:18:58 +0200
+  [ Robert Millan ]
+  * Add conf/kern.mk, conf/kmod.mk, kern/vnode_if.src, and
+    tools/vnode_if.awk to kfreebsd-headers-8.2-1.  (Closes: #630509)
+
+ -- Robert Millan <rmh@debian.org>  Fri, 17 Jun 2011 12:37:06 +0200
 
 kfreebsd-9 (9.0~svn223109-0.1) experimental; urgency=low
 
